# Doxa

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
shared/: pyproject.toml
shared/src/doxa_shared/: __init__.py
shared/src/doxa_shared/constants/: __init__.py  yfinance.py
shared/src/doxa_shared/prompts/: __init__.py  editor.py  regulatory.py  sentiment.py  sentiment_enhanced.py  writer.py
shared/src/doxa_shared/types/: __init__.py  state.py
shared/src/doxa_shared/utils/: __init__.py  cache.py  confidence.py  edgar.py  formatters.py  insights.py  market_data.py  quant.py  sentiment_data.py  tracing.py  valuation.py
src/: config.py  main.py  orchestrator.py  state.py
src/agents/: __init__.py  editor.py  market_data.py  regulatory.py  sentiment.py  valuation.py  writer.py
src/export/: __init__.py  pdf_export.py
src/export/styles/: sell_side.css
tests/: test_orchestrator.py
tests/test_agents/: test_editor.py  test_insights_consumption.py  test_market_data.py  test_market_data_insights.py  test_regulatory.py  test_regulatory_insights.py  test_sentiment.py  test_sentiment_enhanced.py  test_sentiment_insights.py  test_valuation.py  test_valuation_insights.py  test_writer.py
tests/test_export/: test_extract_cover_data.py  test_render_report_pdf_returns_bytes.py  test_strip_title_and_snapshot.py
tests/test_shared/: test_cache.py  test_confidence.py  test_constants.py  test_edgar_multi_year.py  test_edgar_utils.py  test_formatters.py  test_insider_helpers.py  test_market_data_helpers.py  test_market_data_utils.py  test_poc_imports.py  test_prompts.py  test_quant_utils.py  test_sentiment_data.py  test_state.py  test_tracing.py  test_valuation_helpers.py
tests/test_shared/test_insights/: test_post_insight_clamp.py  test_post_insight_happy_path.py
