[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxa"
version = "0.1.0"
description = "AI-powered equity research pipeline: 6 agents turn a ticker into a research report"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ameya Dewan"}]
keywords = ["equity-research", "finance", "ai-agents", "claude", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.36",
    "anthropic>=0.40.0",
    "streamlit>=1.35",
    "httpx>=0.27",
    "weasyprint>=60.0",
    "markdown>=3.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "ruff>=0.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["weasyprint", "weasyprint.*", "markdown"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
