[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxa-shared"
version = "0.1.0"
description = "Shared utilities and types for Doxa"
license = {text = "MIT"}
authors = [{name = "Ameya Dewan"}]
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["doxa_shared*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
